--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <!-- Main Navigation -->
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="html-demo2b.html">About</a></li>
                 <li>Gallery</li>
-                <li>Contact</li>
-                <li></li>
+                <li><a href="html-demo2c.html">Contact</a></li>
             </ul>
         </nav>
         <!-- End Main Navigation -->
@@ -26,6 +25,7 @@
         <main>
             <h1>My First Heading</h1>
             <p>My first paragraph</p>
+            <img src="images/central_park.jpg" alt="Central Park" width="500">
         </main>
         <!-- End Main Content -->
 
