--- a/html-demo2c.html
+++ b/html-demo2c.html
@@ -52,7 +52,8 @@
                     <br>Tell us the reason of your visit today:<br>
                     <textarea cols="30" rows="5"></textarea><br>
 
-                    <input type="submit" value="Sign Up">
+                    <input type="submit" value="Send">
+                    <input type="reset" value="Reset">
 
                 </fieldset>
             </form>
