--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Main Content -->
         <main>
             <h1>My First Heading</h1>
-            <p>My first paragraph</p>
+            <p>My First paragraph</p>
             <img src="images/central_park.jpg" alt="Central Park" width="500">
         </main>
         <!-- End Main Content -->
